<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        	android:text="@string/lblmsg"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        />
    
    <EditText 
        	android:id="@+tela2/txtmsg"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:inputType="textMultiLine"
        />
    
    <Button 
        	android:id="@+tela2/btn"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:text="@string/lblbtn2"
        />
    
    <Button 
        	android:id="@+tela2/btn2"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:text="@string/lblbtn3"
        />

</LinearLayout>